实现 D3 API-09 随访 API 契约
- 补齐随访计划、任务、问卷、异常返院、结果回流 API 契约与幂等\n- 新增 V69 五方言迁移、随访领域事件 schema 与契约测试\n- 同步 API-09 卡、backlog、handoff；国产化真实运行证据继续归 DEFER-001