@@ -1,16 +1,25 @@
 package com.medkernel.engine.followup;
 
 import java.time.Instant;
-import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.medkernel.engine.context.ContextSnapshotRequest;
+import com.medkernel.engine.context.ContextSnapshotResources;
+import com.medkernel.engine.context.ContextSnapshotResponse;
+import com.medkernel.engine.context.ContextSnapshotService;
+import com.medkernel.engine.context.QualityStatus;
+import com.medkernel.engine.context.canonical.CanonicalFollowUp;
+import com.medkernel.engine.context.canonical.CanonicalPatient;
 import com.medkernel.shared.api.PageRequest;
 import com.medkernel.shared.api.PageResponse;
 import com.medkernel.shared.api.error.ApiException;
 import com.medkernel.shared.api.error.ErrorCode;
+import com.medkernel.shared.context.OrgScope;
 import com.medkernel.shared.context.RequestContext;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -18,41 +27,49 @@ import org.springframework.transaction.annotation.Transactional;
 /**
  * 随访引擎服务 (GA-ENG-API-09)。
  *
- * <p>负责随访计划生成、问卷提交、异常回院上报与计划详情查询。
- * 所有操作均绑定当前请求上下文的租户与追踪 ID。
+ * <p>负责随访计划生成、任务分页、问卷下发 / 作答、异常回院触发和结果回流。
+ * 所有操作均绑定当前请求上下文的租户与追踪 ID；模型未接入时显式返回 {@code MODEL_DISABLED}。
  */
 @Service
 public class FollowupEngineService {
+
+    private static final String SYSTEM = "system";
+    private static final String FOLLOWUP_BACKFLOW_UNKNOWN_NAME = "随访回流未提供患者姓名";
+    private static final long DEFAULT_TASK_DELAY_SECONDS = 86_400L * 7;
 
     private final FollowupPlanRepository planRepository;
     private final FollowupTaskRepository taskRepository;
     private final FollowupQuestionnaireRepository questionnaireRepository;
     private final FollowupEventRepository eventRepository;
+    private final ContextSnapshotService contextSnapshotService;
+    private final ObjectMapper json = new ObjectMapper();
 
     public FollowupEngineService(
         FollowupPlanRepository planRepository,
         FollowupTaskRepository taskRepository,
         FollowupQuestionnaireRepository questionnaireRepository,
-        FollowupEventRepository eventRepository
+        FollowupEventRepository eventRepository,
+        ContextSnapshotService contextSnapshotService
     ) {
         this.planRepository = planRepository;
         this.taskRepository = taskRepository;
         this.questionnaireRepository = questionnaireRepository;
         this.eventRepository = eventRepository;
+        this.contextSnapshotService = contextSnapshotService;
     }
 
     /**
      * 根据出院事件、病种、风险分层生成随访计划（幂等）。
-     *
-     * @param request 计划生成请求
-     * @return 计划详情响应（含下属任务列表）
      */
     @Transactional
     public FollowupPlanDetailResponse generatePlan(FollowupPlanGenerateRequest request) {
-        RequestContext.Snapshot ctx = RequestContext.snapshot();
+        RequestContext.Snapshot ctx = requireContext();
         String tenantId = ctx.orgScope().tenantId();
         String traceId = ctx.traceId();
-        Optional<FollowupPlan> existingPlan = existingPlanByPathway(tenantId, request.pathwayId());
+        String actor = actor(ctx);
+
+        Optional<FollowupPlan> existingPlan = existingPlanByIdempotency(tenantId, request.idempotencyKey())
+            .or(() -> existingPlanByPathway(tenantId, request.pathwayId()));
         if (existingPlan.isPresent()) {
             return toDetailResponse(existingPlan.get());
         }
@@ -60,7 +77,7 @@ public class FollowupEngineService {
         Instant now = Instant.now();
         FollowupPlan plan = new FollowupPlan(
             null,
-            UUID.randomUUID().toString(),
+            "fp-" + UUID.randomUUID(),
             tenantId,
             request.patientId(),
             request.encounterId(),
@@ -68,43 +85,39 @@ public class FollowupEngineService {
             request.diseaseCode(),
             request.riskLevel(),
             FollowupPlanStatus.ACTIVE,
+            blankToNull(request.idempotencyKey()),
             now,
-            "system",
+            actor,
             now,
-            "system",
+            actor,
             traceId
         );
         plan = planRepository.save(plan);
 
-        List<FollowupTaskDetailResponse> taskResponses = new ArrayList<>();
-        if (request.taskTypes() != null) {
-            for (String typeStr : request.taskTypes()) {
-                FollowupTaskType taskType = FollowupTaskType.valueOf(typeStr);
-                Instant taskNow = Instant.now();
-                FollowupTask task = new FollowupTask(
-                    null,
-                    UUID.randomUUID().toString(),
-                    tenantId,
-                    plan.planId(),
-                    taskType,
-                    taskNow.plusSeconds(86400 * 7),
-                    FollowupTaskStatus.PENDING,
-                    null,
-                    null,
-                    taskNow,
-                    "system",
-                    taskNow,
-                    "system",
-                    traceId
-                );
-                task = taskRepository.save(task);
-                taskResponses.add(new FollowupTaskDetailResponse(
-                    task.taskId(),
-                    task.taskType(),
-                    task.dueDate(),
-                    task.status()
-                ));
-            }
+        int index = 0;
+        List<FollowupTaskDetailResponse> taskResponses = new java.util.ArrayList<>();
+        for (String typeStr : request.taskTypes()) {
+            FollowupTaskType taskType = FollowupTaskType.valueOf(typeStr);
+            Instant taskNow = Instant.now();
+            FollowupTask task = new FollowupTask(
+                null,
+                "ft-" + UUID.randomUUID(),
+                tenantId,
+                plan.planId(),
+                taskType,
+                taskNow.plusSeconds(DEFAULT_TASK_DELAY_SECONDS),
+                FollowupTaskStatus.PENDING,
+                null,
+                null,
+                taskIdempotencyKey(request.idempotencyKey(), index++),
+                taskNow,
+                actor,
+                taskNow,
+                actor,
+                traceId
+            );
+            task = taskRepository.save(task);
+            taskResponses.add(toTaskResponse(task));
         }
 
         return new FollowupPlanDetailResponse(
@@ -114,132 +127,252 @@ public class FollowupEngineService {
             plan.encounterId(),
             plan.diseaseCode(),
             plan.status(),
-            taskResponses
+            taskResponses,
+            FollowupModelStatus.MODEL_DISABLED
         );
     }
 
     /**
-     * 提交随访问卷数据，标记对应任务为已完成。
-     *
-     * @param taskId  任务业务 ID
-     * @param request 问卷提交请求
+     * 分页查询随访任务列表。
+     */
+    @Transactional(readOnly = true)
+    public PageResponse<FollowupTaskDetailResponse> listTasks(FollowupTaskFilter filter, PageRequest pageRequest) {
+        RequestContext.Snapshot ctx = requireContext();
+        PageRequest req = pageRequest == null ? PageRequest.defaults() : pageRequest;
+        FollowupTaskFilter f = filter == null ? new FollowupTaskFilter(null, null, null) : filter;
+        String status = f.status() == null ? null : f.status().name();
+        long total = taskRepository.countByTenantIdAndFilters(
+            ctx.orgScope().tenantId(), blankToNull(f.patientId()), blankToNull(f.planId()), status);
+        List<FollowupTaskDetailResponse> rows = taskRepository.pageByTenantIdAndFilters(
+                ctx.orgScope().tenantId(), blankToNull(f.patientId()), blankToNull(f.planId()), status,
+                req.offset(), req.safeSize())
+            .stream()
+            .map(this::toTaskResponse)
+            .toList();
+        return PageResponse.of(rows, req, total);
+    }
+
+    /**
+     * 顶层问卷下发 / 作答入口，按幂等键复用已有问卷事实。
+     */
+    @Transactional
+    public FollowupQuestionnaireResponse dispatchQuestionnaire(FollowupQuestionnaireRequest request) {
+        RequestContext.Snapshot ctx = requireContext();
+        String tenantId = ctx.orgScope().tenantId();
+        Optional<FollowupQuestionnaire> existing =
+            existingQuestionnaireByIdempotency(tenantId, request.idempotencyKey());
+        if (existing.isPresent()) {
+            return toQuestionnaireResponse(existing.get());
+        }
+
+        FollowupTask task = findTask(request.taskId(), tenantId);
+        Instant now = Instant.now();
+        String actor = firstNonBlank(request.executorId(), actor(ctx));
+        boolean completed = hasText(request.answerData());
+        FollowupQuestionnaire questionnaire = questionnaireRepository.save(new FollowupQuestionnaire(
+            null,
+            "fq-" + UUID.randomUUID(),
+            tenantId,
+            task.planId(),
+            task.taskId(),
+            request.questionnaireTemplateId(),
+            request.formData(),
+            request.answerData(),
+            request.score(),
+            completed ? "COMPLETED" : "DISPATCHED",
+            request.idempotencyKey(),
+            completed ? now : null,
+            actor,
+            now,
+            actor,
+            now,
+            actor,
+            ctx.traceId()
+        ));
+
+        taskRepository.save(rewriteTask(
+            task,
+            completed ? FollowupTaskStatus.COMPLETED : FollowupTaskStatus.IN_PROGRESS,
+            actor,
+            request.executorType(),
+            now,
+            ctx.traceId()
+        ));
+        return toQuestionnaireResponse(questionnaire);
+    }
+
+    /**
+     * 兼容旧任务下问卷提交端点：真实保存作答并标记任务完成。
      */
     @Transactional
     public void submitQuestionnaire(String taskId, FollowupQuestionnaireSubmitRequest request) {
-        RequestContext.Snapshot ctx = RequestContext.snapshot();
-        String tenantId = ctx.orgScope().tenantId();
-        String traceId = ctx.traceId();
-        
-        FollowupTask task = taskRepository.findByTaskId(taskId)
-            .orElseThrow(() -> ApiException.notFound("随访任务 " + taskId));
-        
-        if (tenantId != null && !tenantId.equals(task.tenantId())) {
-            throw ApiException.forbidden("无权访问该租户数据");
-        }
-
-        FollowupQuestionnaire q = new FollowupQuestionnaire(
-            null,
-            UUID.randomUUID().toString(),
-            tenantId,
+        dispatchQuestionnaire(new FollowupQuestionnaireRequest(
             taskId,
+            "LEGACY_TASK_FORM",
+            request.formData(),
             request.formData(),
             null,
-            "COMPLETED",
-            Instant.now(),
-            request.executorId() != null ? request.executorId() : "system",
-            Instant.now(),
-            request.executorId() != null ? request.executorId() : "system",
-            traceId
-        );
-        questionnaireRepository.save(q);
-
-        FollowupTask updatedTask = new FollowupTask(
-            task.id(),
-            task.taskId(),
-            task.tenantId(),
-            task.planId(),
-            task.taskType(),
-            task.dueDate(),
-            FollowupTaskStatus.COMPLETED,
+            null,
             request.executorId(),
-            request.executorType(),
-            task.createdAt(),
-            task.createdBy(),
-            Instant.now(),
-            request.executorId() != null ? request.executorId() : "system",
-            traceId
-        );
-        taskRepository.save(updatedTask);
+            request.executorType()
+        ));
     }
 
     /**
-     * 上报异常回院事件。
-     *
-     * @param request 异常上报请求
+     * 上报异常回院事件，同时生成返院任务和站内通知请求事件。
      */
     @Transactional
-    public void reportAbnormal(FollowupAbnormalReportRequest request) {
-        RequestContext.Snapshot ctx = RequestContext.snapshot();
+    public FollowupAbnormalReportResponse reportAbnormal(FollowupAbnormalReportRequest request) {
+        RequestContext.Snapshot ctx = requireContext();
         String tenantId = ctx.orgScope().tenantId();
         String traceId = ctx.traceId();
-        
-        FollowupEvent event = new FollowupEvent(
+        String actor = firstNonBlank(request.triggeredBy(), actor(ctx));
+        String idempotencyKey = blankToNull(request.idempotencyKey());
+        ensureAbnormalReportType(request.eventType());
+
+        if (idempotencyKey != null) {
+            Optional<FollowupEvent> existingEvent = eventRepository.findByTenantIdAndEventTypeAndIdempotencyKey(
+                tenantId, FollowupEventType.ABNORMAL_RETURN, idempotencyKey);
+            Optional<FollowupTask> existingTask = taskRepository.findByTenantIdAndIdempotencyKey(
+                tenantId, abnormalTaskKey(idempotencyKey));
+            Optional<FollowupEvent> existingNotification = eventRepository.findByTenantIdAndEventTypeAndIdempotencyKey(
+                tenantId, FollowupEventType.NOTIFICATION_REQUESTED, notificationKey(idempotencyKey));
+            if (existingEvent.isPresent() && existingTask.isPresent()) {
+                return new FollowupAbnormalReportResponse(
+                    existingEvent.get().eventId(),
+                    existingTask.get().taskId(),
+                    existingNotification.map(FollowupEvent::eventId).orElse(null),
+                    traceId
+                );
+            }
+        }
+
+        FollowupPlan plan = findPlan(request.planId(), tenantId);
+        Instant now = Instant.now();
+        FollowupEvent abnormalEvent = eventRepository.save(new FollowupEvent(
             null,
-            UUID.randomUUID().toString(),
+            "fe-" + UUID.randomUUID(),
             tenantId,
-            request.planId(),
-            request.eventType(),
+            plan.planId(),
+            FollowupEventType.ABNORMAL_RETURN,
             request.payload(),
-            request.triggeredBy(),
-            Instant.now(),
-            "system",
-            Instant.now(),
-            "system",
+            actor,
+            idempotencyKey,
+            now,
+            actor,
+            now,
+            actor,
             traceId
+        ));
+
+        FollowupTask returnTask = taskRepository.save(new FollowupTask(
+            null,
+            "ft-" + UUID.randomUUID(),
+            tenantId,
+            plan.planId(),
+            FollowupTaskType.RETURN_VISIT,
+            now,
+            FollowupTaskStatus.ABNORMAL_RETURN,
+            null,
+            null,
+            idempotencyKey == null ? null : abnormalTaskKey(idempotencyKey),
+            now,
+            actor,
+            now,
+            actor,
+            traceId
+        ));
+
+        FollowupEvent notification = eventRepository.save(new FollowupEvent(
+            null,
+            "fe-" + UUID.randomUUID(),
+            tenantId,
+            plan.planId(),
+            FollowupEventType.NOTIFICATION_REQUESTED,
+            writeJson(Map.of(
+                "returnTaskId", returnTask.taskId(),
+                "patientId", plan.patientId(),
+                "encounterId", plan.encounterId(),
+                "sourceEventId", abnormalEvent.eventId()
+            )),
+            actor,
+            idempotencyKey == null ? null : notificationKey(idempotencyKey),
+            now,
+            actor,
+            now,
+            actor,
+            traceId
+        ));
+        return new FollowupAbnormalReportResponse(
+            abnormalEvent.eventId(), returnTask.taskId(), notification.eventId(), traceId);
+    }
+
+    /**
+     * 随访结果回流到标准临床上下文。
+     */
+    @Transactional
+    public FollowupResultBackflowResponse backflowResult(FollowupResultBackflowRequest request) {
+        RequestContext.Snapshot ctx = requireContext();
+        String tenantId = ctx.orgScope().tenantId();
+        String traceId = ctx.traceId();
+        String actor = actor(ctx);
+        FollowupPlan plan = findPlan(request.planId(), tenantId);
+        FollowupTask task = findTask(request.taskId(), tenantId);
+        FollowupQuestionnaire questionnaire = questionnaireRepository.findByQuestionnaireId(request.questionnaireId())
+            .orElseThrow(() -> ApiException.notFound("随访问卷 " + request.questionnaireId()));
+        ensureTenant(tenantId, questionnaire.tenantId());
+        if (!plan.planId().equals(task.planId()) || !task.taskId().equals(questionnaire.taskId())) {
+            throw new ApiException(ErrorCode.ENG_FOLLOW_004, "随访结果引用关系不一致");
+        }
+
+        ContextSnapshotResponse snapshot = contextSnapshotService.create(
+            contextBackflowRequest(plan, questionnaire, request, ctx),
+            request.idempotencyKey()
         );
-        eventRepository.save(event);
+        Instant now = Instant.now();
+        FollowupEvent event = eventRepository.save(new FollowupEvent(
+            null,
+            "fe-" + UUID.randomUUID(),
+            tenantId,
+            plan.planId(),
+            FollowupEventType.RESULT_INFLOW,
+            resultPayload(request, snapshot.snapshotId()),
+            actor,
+            request.idempotencyKey(),
+            now,
+            actor,
+            now,
+            actor,
+            traceId
+        ));
+        return new FollowupResultBackflowResponse(event.eventId(), snapshot.snapshotId(), traceId);
     }
 
     /**
      * 获取随访计划详情，包含下属任务列表。
-     *
-     * @param planId 计划业务 ID
-     * @return 计划详情响应
      */
     @Transactional(readOnly = true)
     public FollowupPlanDetailResponse getPlanDetail(String planId) {
-        RequestContext.Snapshot ctx = RequestContext.snapshot();
-        String tenantId = ctx.orgScope().tenantId();
-        FollowupPlan plan = planRepository.findByPlanId(planId)
-            .orElseThrow(() -> ApiException.notFound("随访计划 " + planId));
-
-        if (tenantId != null && !tenantId.equals(plan.tenantId())) {
-            throw ApiException.forbidden("无权访问该租户数据");
-        }
-
-        return toDetailResponse(plan);
+        RequestContext.Snapshot ctx = requireContext();
+        return toDetailResponse(findPlan(planId, ctx.orgScope().tenantId()));
     }
 
     /**
      * 分页查询随访计划列表。
-     *
-     * @param patientId   患者 ID（可选）
-     * @param pageRequest 分页参数
-     * @return 分页计划详情列表
      */
     @Transactional(readOnly = true)
     public PageResponse<FollowupPlanDetailResponse> listPlans(String patientId, PageRequest pageRequest) {
-        RequestContext.Snapshot ctx = RequestContext.snapshot();
+        RequestContext.Snapshot ctx = requireContext();
         String tenantId = ctx.orgScope().tenantId();
-        
+
         PageRequest req = pageRequest == null ? PageRequest.defaults() : pageRequest;
         org.springframework.data.domain.Pageable pageable = org.springframework.data.domain.PageRequest.of(
-            req.page() - 1,
+            req.safePage() - 1,
             req.safeSize()
         );
 
         org.springframework.data.domain.Page<FollowupPlan> pageResult;
-        if (patientId != null && !patientId.isBlank()) {
+        if (hasText(patientId)) {
             pageResult = planRepository.findByTenantIdAndPatientId(tenantId, patientId, pageable);
         } else {
             pageResult = planRepository.findByTenantId(tenantId, pageable);
@@ -247,24 +380,84 @@ public class FollowupEngineService {
 
         List<FollowupPlanDetailResponse> list = pageResult.getContent().stream()
             .map(this::toDetailResponse)
-            .collect(Collectors.toList());
-
+            .toList();
         return PageResponse.of(list, req, pageResult.getTotalElements());
     }
 
-    private Optional<FollowupPlan> existingPlanByPathway(String tenantId, String pathwayId) {
-        if (pathwayId == null || pathwayId.isBlank()) {
+    private Optional<FollowupPlan> existingPlanByIdempotency(String tenantId, String idempotencyKey) {
+        if (!hasText(idempotencyKey)) {
             return Optional.empty();
         }
-        Optional<FollowupPlan> result = planRepository.findByTenantIdAndPathwayId(tenantId, pathwayId);
-        return result == null ? Optional.empty() : result;
+        return planRepository.findByTenantIdAndIdempotencyKey(tenantId, idempotencyKey);
+    }
+
+    private Optional<FollowupPlan> existingPlanByPathway(String tenantId, String pathwayId) {
+        if (!hasText(pathwayId)) {
+            return Optional.empty();
+        }
+        return planRepository.findByTenantIdAndPathwayId(tenantId, pathwayId);
+    }
+
+    private Optional<FollowupQuestionnaire> existingQuestionnaireByIdempotency(
+            String tenantId, String idempotencyKey) {
+        if (!hasText(idempotencyKey)) {
+            return Optional.empty();
+        }
+        return questionnaireRepository.findByTenantIdAndIdempotencyKey(tenantId, idempotencyKey);
+    }
+
+    private FollowupPlan findPlan(String planId, String tenantId) {
+        FollowupPlan plan = planRepository.findByPlanId(planId)
+            .orElseThrow(() -> ApiException.notFound("随访计划 " + planId));
+        ensureTenant(tenantId, plan.tenantId());
+        return plan;
+    }
+
+    private FollowupTask findTask(String taskId, String tenantId) {
+        FollowupTask task = taskRepository.findByTaskId(taskId)
+            .orElseThrow(() -> ApiException.notFound("随访任务 " + taskId));
+        ensureTenant(tenantId, task.tenantId());
+        return task;
+    }
+
+    private FollowupTask rewriteTask(
+            FollowupTask task,
+            FollowupTaskStatus status,
+            String executorId,
+            String executorType,
+            Instant now,
+            String traceId) {
+        return new FollowupTask(
+            task.id(),
+            task.taskId(),
+            task.tenantId(),
+            task.planId(),
+            task.taskType(),
+            task.dueDate(),
+            status,
+            executorId,
+            executorType,
+            task.idempotencyKey(),
+            task.createdAt(),
+            task.createdBy(),
+            now,
+            firstNonBlank(executorId, SYSTEM),
+            traceId
+        );
+    }
+
+    private void ensureAbnormalReportType(FollowupEventType eventType) {
+        if (eventType != FollowupEventType.ABNORMAL_RETURN) {
+            throw new ApiException(ErrorCode.ENG_FOLLOW_004, "异常回院上报仅允许 ABNORMAL_RETURN 事件");
+        }
     }
 
     private FollowupPlanDetailResponse toDetailResponse(FollowupPlan plan) {
-        List<FollowupTask> tasks = taskRepository.findByTenantIdAndPlanId(plan.tenantId(), plan.planId());
-        List<FollowupTaskDetailResponse> taskResponses = tasks.stream()
-            .map(t -> new FollowupTaskDetailResponse(t.taskId(), t.taskType(), t.dueDate(), t.status()))
-            .collect(Collectors.toList());
+        List<FollowupTaskDetailResponse> taskResponses = taskRepository
+            .findByTenantIdAndPlanId(plan.tenantId(), plan.planId())
+            .stream()
+            .map(this::toTaskResponse)
+            .toList();
 
         return new FollowupPlanDetailResponse(
             plan.planId(),
@@ -273,7 +466,168 @@ public class FollowupEngineService {
             plan.encounterId(),
             plan.diseaseCode(),
             plan.status(),
-            taskResponses
+            taskResponses,
+            FollowupModelStatus.MODEL_DISABLED
         );
+    }
+
+    private FollowupTaskDetailResponse toTaskResponse(FollowupTask task) {
+        return new FollowupTaskDetailResponse(
+            task.taskId(),
+            task.planId(),
+            task.taskType(),
+            task.dueDate(),
+            task.status(),
+            task.executorId(),
+            task.executorType()
+        );
+    }
+
+    private FollowupQuestionnaireResponse toQuestionnaireResponse(FollowupQuestionnaire questionnaire) {
+        return new FollowupQuestionnaireResponse(
+            questionnaire.questionnaireId(),
+            questionnaire.taskId(),
+            questionnaire.questionnaireTemplateId(),
+            questionnaire.status(),
+            questionnaire.traceId()
+        );
+    }
+
+    private ContextSnapshotRequest contextBackflowRequest(
+            FollowupPlan plan,
+            FollowupQuestionnaire questionnaire,
+            FollowupResultBackflowRequest request,
+            RequestContext.Snapshot ctx) {
+        Instant now = Instant.now();
+        CanonicalPatient patient = new CanonicalPatient(
+            plan.patientId(),
+            FOLLOWUP_BACKFLOW_UNKNOWN_NAME,
+            null,
+            null,
+            List.of(),
+            List.of(),
+            "FOLLOWUP",
+            plan.patientId(),
+            request.packageVersion(),
+            now,
+            now,
+            QualityStatus.PARTIAL
+        );
+        CanonicalFollowUp followUp = new CanonicalFollowUp(
+            questionnaire.questionnaireId(),
+            plan.diseaseCode() == null ? "FOLLOWUP_RESULT" : plan.diseaseCode(),
+            taskRepository.findByTaskId(request.taskId()).map(FollowupTask::dueDate).orElse(now),
+            questionnaire.questionnaireTemplateId(),
+            firstNonBlank(request.abnormalFlag(), "N"),
+            "FOLLOWUP",
+            questionnaire.questionnaireId(),
+            request.packageVersion(),
+            now,
+            now,
+            QualityStatus.VALID
+        );
+        ContextSnapshotResources resources = new ContextSnapshotResources(
+            patient,
+            List.of(),
+            List.of(),
+            List.of(),
+            List.of(),
+            List.of(),
+            List.of(),
+            List.of(),
+            List.of(),
+            List.of(),
+            List.of(followUp),
+            List.of()
+        );
+        OrgScope scope = ctx.orgScope();
+        return new ContextSnapshotRequest(
+            request.idempotencyKey(),
+            ctx.traceId(),
+            scope.tenantId(),
+            scope.groupId(),
+            scope.hospitalId(),
+            scope.campusId(),
+            scope.siteId(),
+            scope.departmentId(),
+            scope.specialtyId(),
+            ctx.userId(),
+            List.of(),
+            plan.patientId(),
+            plan.encounterId(),
+            firstNonBlank(scope.specialtyId(), scope.departmentId(), scope.tenantId()),
+            request.packageVersion(),
+            null,
+            null,
+            null,
+            resources
+        );
+    }
+
+    private String resultPayload(FollowupResultBackflowRequest request, String snapshotId) {
+        return writeJson(Map.of(
+            "questionnaireId", request.questionnaireId(),
+            "contextSnapshotId", snapshotId,
+            "abnormalFlag", firstNonBlank(request.abnormalFlag(), "N"),
+            "resultPayload", request.resultPayload()
+        ));
+    }
+
+    private RequestContext.Snapshot requireContext() {
+        RequestContext.Snapshot ctx = RequestContext.snapshot();
+        if (ctx.orgScope() == null || !ctx.orgScope().hasTenant()) {
+            throw ApiException.tenantMissing();
+        }
+        return ctx;
+    }
+
+    private void ensureTenant(String expectedTenantId, String actualTenantId) {
+        if (expectedTenantId != null && !expectedTenantId.equals(actualTenantId)) {
+            throw ApiException.forbidden("无权访问该租户数据");
+        }
+    }
+
+    private String actor(RequestContext.Snapshot ctx) {
+        return firstNonBlank(ctx.userId(), SYSTEM);
+    }
+
+    private String taskIdempotencyKey(String idempotencyKey, int index) {
+        return hasText(idempotencyKey) ? "task:" + idempotencyKey + ":" + index : null;
+    }
+
+    private String abnormalTaskKey(String idempotencyKey) {
+        return "abnormal-task:" + idempotencyKey;
+    }
+
+    private String notificationKey(String idempotencyKey) {
+        return "notification:" + idempotencyKey;
+    }
+
+    private String writeJson(Object value) {
+        try {
+            return json.writeValueAsString(value);
+        } catch (JsonProcessingException e) {
+            throw new IllegalStateException("随访事件载荷序列化失败", e);
+        }
+    }
+
+    private static boolean hasText(String value) {
+        return value != null && !value.isBlank();
+    }
+
+    private static String blankToNull(String value) {
+        return hasText(value) ? value : null;
+    }
+
+    private static String firstNonBlank(String... values) {
+        if (values == null) {
+            return null;
+        }
+        for (String value : values) {
+            if (hasText(value)) {
+                return value;
+            }
+        }
+        return null;
     }
 }
